--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* amplify universal css variables */
+
+:root {
+    --amplify-primary-color: #2563eb;
+    --amplify-primary-tint: #1b4bb3;
+    --amplify-primary-shade: #11337e;
+}
